<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="privacyPolicyLnk" translatable="false">http://objectifandroid.blogspot.fr/2016/12/politique-de-confidentialite.html</string>
    <string name="playStoreLnk" translatable="false">http://play.google.com/store/apps/details?id=fr.piotr.dismoitoutsms</string>

    <string name="app_name">Dis-moi tout SMS</string>
    <string name="app_slogan">Dis-moi tout lit les SMS pour vous !</string>
    <string name="service_notif_titre">Dis moi tout Sms</string>
    <string name="service_notif_texte">Diction des SMS activée</string>
    <string name="dit">dit:</string>
    <string name="fermer">Fermer</string>
    <string name="translate_emoticones">Traduire les émoticônes</string>
    <string name="test_diction">Dis-moi tout lit les SMS pour vous. Si vous avez les mains occupées, activez Dis-moi tout pour continuer vos conversations sans avoir à toucher votre téléphone. Choisissez les contacts que vous souhaitez entendre et activez les commandes vocales.</string>
    <string name="tester_dictiontext">Essayer</string>
    <string name="commande_vocale">Réponse vocale</string>
    <string name="repondre">Répondre</string>
    <string name="reponse">Réponse</string>
    <string name="envoyer">Envoyer</string>
    <string name="messageenvoye">Message envoyé</string>
    <string name="vousavezrepondu">Vous avez répondu: </string>
    <string name="uniquementcontacts">Uniquement mes contacts</string>
    <string name="selectionnertous">Tous</string>
    <string name="deselectionencours">Configuration en cours</string>
    <string name="volume">Volume</string>
    <string name="nom">Nom: </string>
    <string name="numero">Tel: </string>
    <string name="selectioncontacttitle">Qui entendre ?</string>
    <string name="supprimerTousLesContacts">Tout supprimer</string>
    <string name="ajouterTousLesContacts">Tout ajouter</string>
    <string name="suppression">Suppression</string>
    <string name="confirmersuppression">Retirer de la liste ?</string>
    <string name="oui">Oui</string>
    <string name="non">Non</string>
    <string name="confirmerEnregistrer">Sauvegarde</string>
    <string name="voulezVousnregistrer">Voulez-vous sauvegarder ?</string>
    <string name="sauvegardeeffectuee">Sauvegarde effectuée</string>
    <string name="nouveaumessage">Nouveau message</string>
    <string name="recherchercontact">Rechercher contact</string>
    <string name="votrereponseest">Vous avez répondu: </string>
    <string name="langue">Langue</string>
    <string name="dites">dites</string>
    <string name="ou">ou</string>
    <string name="modifier">Modifier</string>
    <string name="aajoute">a ajouté</string>
    <string name="principal">Principal</string>
    <string name="parametres">Paramètres</string>
    <string name="activated">Activé</string>
    <string name="deactivated">Désactivé</string>
    <string name="activate">Activer</string>
    <string name="deactivate">Désactiver</string>
    <string name="stoppedByStepText">Marche détectée - Arrêt automatique</string>
    <string name="stepDetectorOption">Désactiver quand je marche</string>
    <string name="areYouSure">Êtes-vous sûr ?</string>

    <!-- emoticones -->
    <string name="emoticone_ange">ange</string>
    <string name="emoticone_sourrire">sourire</string>
    <string name="emoticone_triste">triste</string>
    <string name="emoticone_pleur">pleur</string>
    <string name="emoticone_clein_d_oeil">clin-d\'oeil</string>
    <string name="emoticone_tirer_la_langue">tirer la langue</string>
    <string name="emoticone_surpris">surpris</string>
    <string name="emoticone_bisou">bisou</string>
    <string name="emoticone_hurlement">hurlement</string>
    <string name="emoticone_cool">cool</string>
    <string name="emoticone_decu">déçu</string>
    <string name="emoticone_bouche_cousue">bouche cousue</string>
    <string name="emoticone_rires">rires</string>
    <string name="emoticone_confus">confus</string>
    <string name="emoticone_embarrasse">embarrassé</string>
    <string name="emoticone_indecis">indecis</string>
    <string name="emoticone_perspective_d_argent">perspective d\'argent</string>
    <string name="emoticone_circonflex"> </string>
    <string name="privacy_policy">Politique de confidentialité</string>
    <string name="headset_notification_text">Ecouteurs détectés, souhaitez-vous activer DisMoiTout ?</string>
    <string name="heaset_mode_option">Lorsque je branche des écouteurs</string>
    <string name="bluetooth_heaset_mode_option">Lors de la connexion à un périphérique bluetooth</string>
    <string name="diction_des_sms">Diction des SMS</string>
    <string name="repeat">Répéter</string>
    <string name="stop">Arrêter</string>
    <string name="answer">Répondre</string>
    <string name="send">Envoyer</string>
    <string name="dictate_contact_name">Dictez le nom d\'un contact</string>
    <string name="found_contacts">contacts trouvés:</string>
    <string name="manage_contacts">Gérer mes contacts</string>
    <string name="action_retry">Réessayer</string>
    <string name="error_occured">Oups ! Une erreur est survenue</string>
    <string name="new_try_in">Nouvel essai dans %s</string>
    <string name="about">À propos…</string>
    <string name="app_version_name">Version</string>
    <string name="options">Options</string>

    <string name="tutorial_activation_title">Activer Dis-moi tout</string>
    <string name="tutorial_activation_text">Activer la diction ici</string>
    <string name="tutorial_contacts_title">Qui entendre ?</string>
    <string name="tutorial_contacts_text">Si vous ne voulez entendre que vos contacts et pas les pubs, c\'est par ici</string>
    <string name="tutorial_contact_selection_title">Sélection des contacts</string>
    <string name="tutorial_contact_selection_text">Pour définir une liste restreinte de vos contacts choisissez Gérer mes contacts</string>
    <string name="tutorial_reponse_vocale_title">Sans les mains</string>
    <string name="tutorial_reponse_vocale_text">Si vous voulez pouvoir répondre aux SMS simplement avec votre voix activez l\'option Réponse vocale</string>
    <string name="tutorial_headset_mode_title">Mode écouteurs</string>
    <string name="tutorial_headset_mode_text">Activez le mode écouteurs pour que Dis-moi tout SMS s\'active automatiquement lorsque des écouteurs filaires sont branchés à votre téléphone</string>
    <string name="tutorial_bluetooth_headset_mode_text">Activez le mode bluetooth pour que Dis-moi tout SMS s\'active automatiquement lorsqu\'un périphérique bluetooth est connecté à votre téléphone</string>
    <string name="tutorial_bluetooth_headset_mode_title">Mode bluetooth</string>

    <string name="help">Aide</string>
    <string name="new_message_from">Nouveau message reçu de la part de %s.</string>
    <string name="listen">Lire</string>
    <string name="private_life_mode">Mode vie privée</string>
    <string name="tutorial_private_life_mode_title">Mode vie privée</string>
    <string name="tutorial_private_life_mode_text">Peur que tout le monde entende vos messages ? Le mode vie privée est fait pour vous ! Activez-le et Dis-moi tout vous demandera si vous souhaitez lire les nouveaux messages ou pas.</string>
    <string name="ajouter">Ajouter</string>
    <string name="tts_engine">Moteur de synthèse vocale</string>
    <string name="auto_activation">Activation automatique</string>
    <string name="bluetooth_device_fragment_no_device_found">Aucun périphérique bluetooth audio trouvé</string>
    <string name="bluetooth_device_fragment_help_text">Choisissez les périphériques qui activent et désactivent automatiquement la diction de vos SMS</string>
    <string name="no_response_yet">Vous n\'avez pas encore répondu</string>
    <string name="play_store_link">Lien vers le play store</string>
    <string name="warn_ignore_battery_optimization">Attention ! l\'optimisation de la batterie risque d\'arrêter Dis-moi tout SMS sans raison... cliquer ici pour corriger</string>
    <string name="threads_title">Messages</string>
    <string name="you">Vous</string>
    <string name="message_not_sent">Non envoyé</string>
    <string name="not_yout_default_sms_handler">Dis-moi tout n\'est pas gestionnaire des SMS</string>
    <string name="change_sms_manager_snack_action">Changer</string>
    <string name="reply_label">Répondre</string>
    <string name="mark_as_read">Marquer comme lu</string>

</resources>