<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_repeat"
        android:enabled="true"
        android:icon="@drawable/ic_repeat_24dp"
        android:title="@string/repeat"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_stop"
        android:enabled="true"
        android:icon="@drawable/ic_stop_24dp"
        android:title="@string/stop"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_answer"
        android:enabled="true"
        android:icon="@drawable/ic_message_24dp"
        android:title="@string/answer"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_send"
        android:enabled="true"
        android:icon="@drawable/ic_send_24dp"
        android:title="@string/send"
        app:showAsAction="always" />

</menu>