<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".DisMoiToutSmsActivity">

    <Switch
        android:id="@+id/switch_activation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:padding="16sp"
        android:textOn="@string/service_notif_texte"
        android:textOff="@string/diction_des_sms"
        android:text="@string/diction_des_sms"/>

    <Button
        android:id="@+id/btn_tester"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:background="?selectableItemBackground"
        android:textColor="@color/blue700"
        android:text="@string/tester_dictiontext" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1sp"
        android:layout_marginStart="16sp"
        android:background="@color/blue700"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8sp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">

                <ImageView
                    android:layout_width="48sp"
                    android:layout_height="48sp"
                    android:padding="12sp"
                    android:src="@drawable/ic_language_24dp"
                    android:tint="@color/grey600" />

                <TextView
                    android:id="@+id/tabwidgettext"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:gravity="center"
                    android:text="@string/langue"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="@color/black" />

                <Spinner
                    android:id="@+id/sp_language"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="16sp"
                    android:textColor="@color/black" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="48sp"
                    android:layout_height="48sp"
                    android:padding="12sp"
                    android:tint="@color/grey600"
                    android:src="@drawable/ic_people_24dp"/>

                <Switch
                    android:id="@+id/switch_uniquement_mes_contacts"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/uniquementcontacts"
                    android:textColor="@color/black" />

            </LinearLayout>

            <TextView
                android:id="@+id/tv_gerer_contacts"
                android:layout_width="match_parent"
                android:layout_height="48sp"
                android:drawableEnd="@drawable/ic_chevron_right_24dp"
                android:layout_gravity="end"
                android:gravity="center_vertical|end"
                android:textColor="@color/grey600"
                android:background="?selectableItemBackground"
                android:text="@string/manage_contacts"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="48sp"
                    android:layout_height="48sp"
                    android:padding="12sp"
                    android:tint="@color/grey600"
                    android:src="@drawable/ic_insert_emoticon_24dp"/>

                <Switch
                    android:id="@+id/switch_emoticones"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/translate_emoticones"
                    android:textColor="@color/black"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="48sp"
                    android:layout_height="48sp"
                    android:padding="12sp"
                    android:tint="@color/grey600"
                    android:src="@android:drawable/ic_btn_speak_now"/>

                <Switch
                    android:id="@+id/switch_reponse_vocale"
                    android:layout_width="match_parent"
                    android:layout_height="64sp"
                    android:textColor="@color/black"
                    android:text="@string/commande_vocale"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_step_detector"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="48sp"
                    android:layout_height="48sp"
                    android:padding="12sp"
                    android:tint="@color/grey600"
                    android:src="@drawable/ic_directions_run_24dp"/>

                <Switch
                    android:id="@+id/switch_step_detector"
                    android:layout_width="match_parent"
                    android:layout_height="64sp"
                    android:text="@string/stepDetectorOption"
                    android:textColor="@color/black"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="48sp"
                    android:layout_height="48sp"
                    android:padding="12sp"
                    android:tint="@color/grey600"
                    android:src="@drawable/ic_headset_white_24dp"/>

                <Switch
                    android:id="@+id/switch_headset_mode"
                    android:layout_width="match_parent"
                    android:layout_height="64sp"
                    android:text="@string/heaset_mode_option"
                    android:textColor="@color/black" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>
