<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DisMoiToutSmsActivity">

    <ImageView
        android:id="@+id/status_icon"
        android:layout_width="180sp"
        android:layout_height="180sp"
        android:src="@drawable/ic_deactivate_48dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="96sp"
        android:layout_marginBottom="96sp"/>

    <TextView
        android:id="@+id/status_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="20sp"
        android:textColor="@color/red500"
        android:text="@string/deactivated"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/status_icon"/>


    <Button
        android:id="@+id/btn_activate"
        android:layout_width="128dp"
        android:layout_height="54dp"
        android:drawableStart="@drawable/ic_volume_up_white_24dp"
        style="@style/GreenButton"
        android:text="@string/activate"
        android:layout_alignParentBottom="true"/>

    <TextView
        android:id="@+id/btn_deactivate"
        android:layout_width="128dp"
        android:layout_height="54dp"
        android:drawableStart="@drawable/ic_volume_off_white_24dp"
        style="@style/RedButton"
        android:text="@string/deactivate"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"/>


</RelativeLayout>
