<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    tools:layout_width="300sp"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:clickable="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8sp"
        android:background="@color/cardview_dark_background"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:drawableLeft="@drawable/iconeprincipale"
            android:text="@string/parametres"
            android:textColor="@android:color/white"
            android:textAppearance="@style/TextAppearance.AppCompat.Title.Inverse" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_gravity="bottom|end"
            android:onClick="openPrivacyPolicy"
            android:text="@string/privacy_policy"
            android:id="@+id/textView"
            android:drawableRight="@android:drawable/ic_menu_info_details"
            android:textAppearance="@style/TextAppearance.AppCompat.Small.Inverse" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="64sp"
        android:paddingLeft="16sp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/ic_language_white_24dp"
            android:tint="@color/grey700"
            android:padding="4sp"/>

        <TextView
            android:layout_marginLeft="8sp"
            android:id="@+id/tabwidgettext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/langue"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/black" />

        <Spinner
            android:id="@+id/languageChooserTab"
            android:layout_marginLeft="16sp"
            android:layout_gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="48sp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="64sp"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:paddingLeft="16sp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/ic_person_black_24dp"
            android:tint="@color/grey700"
            android:padding="4sp"/>

        <CheckBox
            android:id="@+id/uniquementContactesTab"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text=""
            android:button="@drawable/custom_checkbox"/>

        <TextView
            android:id="@+id/parametreTextViewUniquementMesContacts"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/uniquementcontacts"
            android:textColor="@color/black"
            android:background="@drawable/selectable_background"
            android:textAppearance="?android:textAppearanceSmall"/>

        <ImageView
            android:id="@+id/choisirContactsTab"
            android:layout_width="24sp"
            android:layout_height="match_parent"
            android:tint="@color/grey800"
            android:background="@drawable/selectable_background"
            android:src="@drawable/ic_more_vert_white_24dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="64sp"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:paddingLeft="16sp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/ic_insert_emoticon_white_24dp"
            android:tint="@color/grey700"
            android:padding="4sp"/>

        <CheckBox
            android:id="@+id/translateEmoticonesBtnTab"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text=""
            android:button="@drawable/custom_checkbox"
            tools:checked="true"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/translate_emoticones"
            android:textColor="@color/black"
            android:textAppearance="?android:textAppearanceSmall"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="64sp"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:paddingLeft="16sp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@android:drawable/ic_btn_speak_now"
            android:tint="@color/grey700"/>

        <CheckBox
            android:id="@+id/commandeVocaleBtnTab"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text=""
            android:button="@drawable/custom_checkbox"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/commande_vocale"
            android:textColor="@color/black"
            android:textAppearance="?android:textAppearanceSmall"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/card_step_detector"
        android:layout_width="match_parent"
        android:layout_height="64sp"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:paddingLeft="16sp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/ic_directions_run_white_24dp"
            android:tint="@color/grey700"
            android:padding="4sp"/>

        <CheckBox
            android:id="@+id/stepDetectorCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text=""
            android:button="@drawable/custom_checkbox"
            tools:checked="true"
            android:textColor="@color/black" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/stepDetectorOption"
            android:textColor="@color/black"
            android:textAppearance="?android:textAppearanceSmall"/>

    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/testerDictionBtnTab"
            android:layout_width="match_parent"
            android:layout_height="48sp"
            android:layout_gravity="bottom"
            android:background="@drawable/button"
            android:layout_margin="4sp"
            android:textColor="@color/white"
            android:text="@string/tester_dictiontext" />


    </FrameLayout>

</LinearLayout>
